[package]
name = "hmac-sha1-compact"
version = "1.1.5"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A small, self-contained SHA1 and HMAC-SHA1 implementation"
keywords = ["crypto", "hash", "hmac", "sha1"]
repository = "https://github.com/jedisct1/rust-hmac-sha1"
homepage = "https://github.com/jedisct1/rust-hmac-sha1"
categories = ["algorithms", "cryptography", "no-std"]
license = "ISC"

[dependencies]
digest09 = { package = "digest", version = "0.9.0", optional = true }
digest010 = { package = "digest", version = "0.10.7", features = ["oid"], optional = true }

[features]
default = []
traits = ["traits09", "traits010"]
traits09 = ["digest09"]
traits010 = ["digest010"]

[profile.release]
lto = true
panic = "abort"
opt-level = 3
